libs/preprocessor/tests/errors/pe3_expected_ident/stderr.ansi
[31m[PE3] Error:[0m expected identifier
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:1:8[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m#[0m[38;5;249md[0m[38;5;249me[0m[38;5;249mf[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249me[0m
 [38;5;240m  │[0m        [38;5;201m─[0m[38;5;201m┬[0m  
 [38;5;240m  │[0m         [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m expected identifier, found `\n`
[38;5;246m───╯[0m
